--- a/.github/workflows/deploy-caddy.yml
+++ b/.github/workflows/deploy-caddy.yml
@@ -77,7 +77,7 @@ jobs:
   deploy:
     name: Deploy to Caddy
     needs: build
-    runs-on: [self-hosted, tomjan]
+    runs-on: [self-hosted]
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v4
