add final version

--- a/.github/workflows/deploy-tomjan.yml
+++ b/.github/workflows/deploy-tomjan.yml
@@ -105,7 +105,7 @@ jobs:
       
       - name: Reload Caddy
         run: |
-          sudo systemctl reload caddy
+          sudo service caddy reload
           echo "Caddy server reloaded"
       
       - name: Verify deployment
