add final version 2 with tests

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ pnpm-debug.log*
 raw/marttiini/products.jsonl
 .translations-progress/
 .translation-instructions/
+# Playwright Test Results
+/test-results/
+/playwright-report/
+/playwright/.cache/
