--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "dictionaries:sync": "tsx src/content.dictionaries.ts sync",
     "translations:apply": "tsx src/content.translations.ts",
     "translations:update": "tsx src/content.translations.ts update",
-    "translations:auto": "tsx src/content.translations.ts auto"
+    "translations:auto": "tsx src/content.translations.ts auto",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -25,6 +29,8 @@
     "dotenv": "^17.2.3"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.6",
+    "@playwright/test": "^1.57.0",
     "tsx": "^4.21.0"
   }
 }
